{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 13,
  "lineage": "119ed1d1-6426-9cfd-dbaf-a487c7c05f3d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ccc7a62d0b3c70d0",
            "arn": "arn:aws:ec2:us-west-2:463367047118:instance/i-030d70df461fde6a5",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-030d70df461fde6a5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "4640-wk7-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04a0a989f5d667ad5"
              }
            ],
            "primary_network_interface_id": "eni-04a0a989f5d667ad5",
            "private_dns": "ip-10-0-1-228.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.228",
            "public_dns": "ec2-54-191-201-16.us-west-2.compute.amazonaws.com",
            "public_ip": "54.191.201.16",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-084f73dc632440ea5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c38b205e74c2e74",
            "tags": {
              "Name": "Web"
            },
            "tags_all": {
              "Name": "Web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e39b229956c989bd"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463367047118",
            "id": "i-030d70df461fde6a5",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.web",
            "aws_vpc.web",
            "data.aws_ami.debian"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ccc7a62d0b3c70d0",
            "arn": "arn:aws:ec2:us-west-2:463367047118:instance/i-0aa498b589dec55fd",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aa498b589dec55fd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "4640-wk7-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ccb67ce5e97a1d34"
              }
            ],
            "primary_network_interface_id": "eni-0ccb67ce5e97a1d34",
            "private_dns": "ip-10-0-1-94.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.94",
            "public_dns": "ec2-35-92-94-249.us-west-2.compute.amazonaws.com",
            "public_ip": "35.92.94.249",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-027f28d6d229a0d24",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c38b205e74c2e74",
            "tags": {
              "Name": "Web"
            },
            "tags_all": {
              "Name": "Web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e39b229956c989bd"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463367047118",
            "id": "i-0aa498b589dec55fd",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.web",
            "aws_vpc.web",
            "data.aws_ami.debian"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:463367047118:internet-gateway/igw-044ce53cd7c80e154",
            "id": "igw-044ce53cd7c80e154",
            "owner_id": "463367047118",
            "region": "us-west-2",
            "tags": {
              "Name": "Web"
            },
            "tags_all": {
              "Name": "Web"
            },
            "vpc_id": "vpc-0bc1166ebda48be56"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-044ce53cd7c80e154",
            "id": "r-rtb-026da44e4322218d61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-026da44e4322218d6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463367047118",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-026da44e4322218d6"
          },
          "dependencies": [
            "aws_internet_gateway.web-gw",
            "aws_route_table.web",
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:463367047118:route-table/rtb-026da44e4322218d6",
            "id": "rtb-026da44e4322218d6",
            "owner_id": "463367047118",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [],
            "tags": {
              "Name": "web-route"
            },
            "tags_all": {
              "Name": "web-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc1166ebda48be56"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463367047118",
            "id": "rtb-026da44e4322218d6",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f50920b694388317",
            "region": "us-west-2",
            "route_table_id": "rtb-026da44e4322218d6",
            "subnet_id": "subnet-06c38b205e74c2e74"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.web",
            "aws_subnet.web",
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:463367047118:security-group/sg-0e39b229956c989bd",
            "description": "allow ssh from home and work",
            "egress": [],
            "id": "sg-0e39b229956c989bd",
            "ingress": [],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "463367047118",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web"
            },
            "tags_all": {
              "Name": "Web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc1166ebda48be56"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463367047118",
            "id": "sg-0e39b229956c989bd",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:463367047118:subnet/subnet-06c38b205e74c2e74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c38b205e74c2e74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "463367047118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "Web"
            },
            "tags_all": {
              "Name": "Web"
            },
            "vpc_id": "vpc-0bc1166ebda48be56"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463367047118",
            "id": "subnet-06c38b205e74c2e74",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:463367047118:vpc/vpc-0bc1166ebda48be56",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02af86a5c61dc1a3e",
            "default_route_table_id": "rtb-0520780f3f15b65d5",
            "default_security_group_id": "sg-0fa4192dd685b4969",
            "dhcp_options_id": "dopt-03eb659940fb013a7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bc1166ebda48be56",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0520780f3f15b65d5",
            "owner_id": "463367047118",
            "region": "us-west-2",
            "tags": {
              "Name": "project_vpc",
              "Project": "lab_week_4"
            },
            "tags_all": {
              "Name": "project_vpc",
              "Project": "lab_week_4"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463367047118",
            "id": "vpc-0bc1166ebda48be56",
            "region": "us-west-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "web-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:463367047118:security-group-rule/sgr-049a51866d4a6ce57",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-049a51866d4a6ce57",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-2",
            "security_group_id": "sg-0e39b229956c989bd",
            "security_group_rule_id": "sgr-049a51866d4a6ce57",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463367047118",
            "id": "sgr-049a51866d4a6ce57",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:463367047118:security-group-rule/sgr-0dcc5abb3f7b1133d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0dcc5abb3f7b1133d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-2",
            "security_group_id": "sg-0e39b229956c989bd",
            "security_group_rule_id": "sgr-0dcc5abb3f7b1133d",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463367047118",
            "id": "sgr-0dcc5abb3f7b1133d",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:463367047118:security-group-rule/sgr-0217a9fb2bb9ea755",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0217a9fb2bb9ea755",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-2",
            "security_group_id": "sg-0e39b229956c989bd",
            "security_group_rule_id": "sgr-0217a9fb2bb9ea755",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "463367047118",
            "id": "sgr-0217a9fb2bb9ea755",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.web"
          ]
        }
      ]
    }
  ]
}